# endo-ai-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval_cases/: synthetic_endoscopy.json
examples/: __init__.py  synthetic_gastroscopy.py
src/endo_ai_assistant/: __init__.py  agent.py  analytics.py  cli.py  dev_extractors.py  evaluation.py  extraction.py  llm_extractor.py  models.py  nomenclature.py  openai_client.py  pipeline.py  quality.py  render.py  schema_tools.py  web_app.py
tests/: __init__.py  test_agent.py  test_analytics.py  test_cli.py  test_evaluation.py  test_llm_extractor.py  test_models.py  test_nomenclature.py  test_openai_client.py  test_render.py  test_web_app.py
