[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "endo-ai-assistant"
version = "0.1.0"
description = "AI-assisted endoscopy report structuring prototype."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7,<3",
    "openai>=2,<3",
]

[tool.setuptools.packages.find]
where = ["src"]
